# LMS

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
lending/: hooks.py
lending/loan_management/workspace/loan_management/: loan_management.json
