[project]
name = "lending"
authors = [
    { name = "Cronos Capital IT", email = "support@steed.co.za"}
]
description = "RAFNAV Lending software"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
known_frappe = ["frappe"]
known_erpnext = ["erpnext"]
known_lending = ["lending"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FRAPPE", "ERPNEXT", "LENDING", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff.lint]
typing-modules = ["frappe.types"]

select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "RUF001", # string contains ambiguous unicode character
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
